--- a/DretNetAobScan.Test/DretNetAobScan.Test.csproj
+++ b/DretNetAobScan.Test/DretNetAobScan.Test.csproj
@@ -40,7 +40,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DretNetAobScan">
-      <HintPath>..\DretNetAobScan\bin\Debug\DretNetAobScan.dll</HintPath>
+      <HintPath>..\DretNetAobScan\bin\Release\DretNetAobScan.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.2.1.1\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.dll</HintPath>
