--- a/DretNetAobScan/DretNetAobScan.csproj
+++ b/DretNetAobScan/DretNetAobScan.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AobScan.cs" />
+    <Compile Include="Misc\Helper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
