--- a/DretNetAobScan.Test/DretNetAobScan.Test.csproj
+++ b/DretNetAobScan.Test/DretNetAobScan.Test.csproj
@@ -42,7 +42,8 @@
     <StartupObject>DretNetAobScan.Test.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DretNetAobScan">
+    <Reference Include="DretNetAobScan, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\DretNetAobScan\bin\Release\DretNetAobScan.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
