--- a/DretNetAobScan.Test/DretNetAobScan.Test.csproj
+++ b/DretNetAobScan.Test/DretNetAobScan.Test.csproj
@@ -6,7 +6,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{B3750D02-6E87-4F3A-837D-FA6E563928E4}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DretNetAobScan.Test</RootNamespace>
     <AssemblyName>DretNetAobScan.Test</AssemblyName>
